Signed-off-by: 397713572 <397713572@qq.com>

--- a/yi18/WebContent/WEB-INF/web.xml
+++ b/yi18/WebContent/WEB-INF/web.xml
@@ -7,7 +7,7 @@
     <filter-class>cn.yi18.filter.URLMappingFilter</filter-class>
     <init-param>
     	<param-name>ignore</param-name>
-    	<param-value>/action/,/commons/</param-value>
+    	<param-value>/action/,/common/</param-value>
     </init-param>
     <init-param>
     	<param-name>ignoreExts</param-name>
