--- a/yi18/config/jdbc.properties
+++ b/yi18/config/jdbc.properties
@@ -6,9 +6,9 @@ jdbc.show_sql=true
 
 # Database Configurations
 jdbc.driverClass=com.mysql.jdbc.Driver
-jdbc.jdbcUrl=jdbc\:mysql\://localhost\:3306/yi18?characterEncoding\=utf8
+jdbc.jdbcUrl=jdbc\:mysql\://127.0.0.1\:3306/yi18?characterEncoding\=utf8
 jdbc.user=root
-jdbc.password=yslcl
+jdbc.password=clysl
 jdbc.maxPoolSize=50
 jdbc.minPoolSize=2
 jdbc.initialPoolSize=2
