Signed-off-by: yi18 <mail.yi18.cn@gmail.com>

--- a/yi18/config/jdbc.properties
+++ b/yi18/config/jdbc.properties
@@ -8,7 +8,7 @@ jdbc.show_sql=true
 jdbc.driverClass=com.mysql.jdbc.Driver
 jdbc.jdbcUrl=jdbc\:mysql\://127.0.0.1\:3306/yi18?characterEncoding\=utf8
 jdbc.user=root
-jdbc.password=clysl
+jdbc.password=yslcl
 jdbc.maxPoolSize=50
 jdbc.minPoolSize=2
 jdbc.initialPoolSize=2
