--- a/yi18/WebContent/WEB-INF/web.xml
+++ b/yi18/WebContent/WEB-INF/web.xml
@@ -2,6 +2,13 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="2.5">
   <display-name>yi18</display-name>
   
+  
+   <listener>
+  
+  <listener-class>cn.yi18.listener.SCListener</listener-class>
+  
+  </listener>
+  
  <filter>
     <filter-name>URLMappingFilte</filter-name>
     <filter-class>cn.yi18.filter.URLMappingFilter</filter-class>
@@ -37,6 +44,7 @@
     <url-pattern>/action/*</url-pattern>
   </servlet-mapping>
   
+ 
   
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
