Signed-off-by: 397713572 <397713572@qq.com>

--- a/yi18/config/cloudfoundryjdbc.properties
+++ b/yi18/config/cloudfoundryjdbc.properties
@@ -6,11 +6,11 @@ jdbc.show_sql=true
 
 # Database Configurations
 jdbc.driverClass=com.mysql.jdbc.Driver
-jdbc.jdbcUrl=jdbc\:mysql\://172.30.48.31\:3306/d5a93662347a1442c8f24121b127e61c1?characterEncoding\=utf8
-jdbc.user=uQkzvbgCiJxuZ
-jdbc.password=pMSjedlqY9TCS
-jdbc.maxPoolSize=50
-jdbc.minPoolSize=2
+jdbc.jdbcUrl=DB_URL
+jdbc.user=DB_USER
+jdbc.password=DB_PASSWORD
+jdbc.maxPoolSize=DB_MAXPOOL
+jdbc.minPoolSize=DB_MINPOOL
 jdbc.initialPoolSize=2
 jdbc.acquireIncrement=2
 jdbc.maxStatements=1000
