--- a/yi18/config/jdbc.properties
+++ b/yi18/config/jdbc.properties
@@ -1,16 +1,17 @@
 
 # DataSource
+install=false
 jdbc.datasource=com.mchange.v2.c3p0.ComboPooledDataSource
 jdbc.show_sql=true
 
 
 # Database Configurations
 jdbc.driverClass=com.mysql.jdbc.Driver
-jdbc.jdbcUrl=jdbc\:mysql\://127.0.0.1\:3306/yi18?characterEncoding\=utf8
-jdbc.user=root
-jdbc.password=clysl
-jdbc.maxPoolSize=50
-jdbc.minPoolSize=2
+jdbc.jdbcUrl=DB_URL
+jdbc.user=DB_USER
+jdbc.password=DB_PASSWORD
+jdbc.maxPoolSize=DB_MAXPOOL
+jdbc.minPoolSize=DB_MINPOOL
 jdbc.initialPoolSize=2
 jdbc.acquireIncrement=2
 jdbc.maxStatements=1000
