Signed-off-by: 397713572 <397713572@qq.com>

--- a/yi18/config/cloudfoundryjdbc.properties
+++ b/yi18/config/cloudfoundryjdbc.properties
@@ -1,22 +1,22 @@
 
 # DataSource
 install=false
-jdbc.datasource=com.mchange.v2.c3p0.ComboPooledDataSource
+jdbc.datasource=com.alibaba.druid.pool.DruidDataSource
 jdbc.show_sql=true
 
 
 # Database Configurations
-jdbc.driverClass=com.mysql.jdbc.Driver
-jdbc.jdbcUrl=DB_URL
-jdbc.user=DB_USER
+jdbc.driverClassName=com.mysql.jdbc.Driver
+jdbc.url=DB_URL
+jdbc.username=DB_USER
 jdbc.password=DB_PASSWORD
-jdbc.maxPoolSize=DB_MAXPOOL
-jdbc.minPoolSize=DB_MINPOOL
-jdbc.initialPoolSize=2
+jdbc.maxActive=DB_MAXPOOL
+jdbc.minIdle=DB_MINPOOL
+jdbc.initialSize=2
 jdbc.acquireIncrement=2
-jdbc.maxStatements=1000
-jdbc.maxIdleTime=300
-jdbc.checkoutTimeout=5000
+jdbc.maxPoolPreparedStatementPerConnectionSize=1000
+jdbc.minEvictableIdleTimeMillis =300
+
 
 
 
