--- a/yi18/config/jdbc.properties
+++ b/yi18/config/jdbc.properties
@@ -1,22 +1,21 @@
 
 # DataSource
-install=false
-jdbc.datasource=com.mchange.v2.c3p0.ComboPooledDataSource
+install=true
+jdbc.datasource=com.alibaba.druid.pool.DruidDataSource
 jdbc.show_sql=true
 
 
 # Database Configurations
-jdbc.driverClass=com.mysql.jdbc.Driver
-jdbc.jdbcUrl=DB_URL
-jdbc.user=DB_USER
-jdbc.password=DB_PASSWORD
-jdbc.maxPoolSize=DB_MAXPOOL
-jdbc.minPoolSize=DB_MINPOOL
-jdbc.initialPoolSize=2
+jdbc.driverClassName=com.mysql.jdbc.Driver
+jdbc.url=jdbc\:mysql\://127.0.0.1\:3306/yi18?characterEncoding\=utf8
+jdbc.username=root
+jdbc.password=clysl
+jdbc.maxActive=50
+jdbc.minIdle=2
+jdbc.initialSize=2
 jdbc.acquireIncrement=2
-jdbc.maxStatements=1000
-jdbc.maxIdleTime=300
-jdbc.checkoutTimeout=5000
+jdbc.maxPoolPreparedStatementPerConnectionSize=1000
+jdbc.minEvictableIdleTimeMillis =300
 
 
 
