--- a/yi18/config/localjdbc.properties
+++ b/yi18/config/localjdbc.properties
@@ -1,22 +1,21 @@
 
 # DataSource
 install=true
-jdbc.datasource=com.mchange.v2.c3p0.ComboPooledDataSource
+jdbc.datasource=com.alibaba.druid.pool.DruidDataSource
 jdbc.show_sql=true
 
 
 # Database Configurations
-jdbc.driverClass=com.mysql.jdbc.Driver
-jdbc.jdbcUrl=jdbc\:mysql\://127.0.0.1\:3306/yi18?characterEncoding\=utf8
-jdbc.user=root
+jdbc.driverClassName=com.mysql.jdbc.Driver
+jdbc.url=jdbc\:mysql\://127.0.0.1\:3306/yi18?characterEncoding\=utf8
+jdbc.username=root
 jdbc.password=clysl
-jdbc.maxPoolSize=50
-jdbc.minPoolSize=2
-jdbc.initialPoolSize=2
+jdbc.maxActive=50
+jdbc.minIdle=2
+jdbc.initialSize=2
 jdbc.acquireIncrement=2
-jdbc.maxStatements=1000
-jdbc.maxIdleTime=300
-jdbc.checkoutTimeout=5000
+jdbc.maxPoolPreparedStatementPerConnectionSize=1000
+jdbc.minEvictableIdleTimeMillis =300
 
 
 
