Signed-off-by: 397713572 <397713572@qq.com>

--- a/yi18/config/jdbc.properties
+++ b/yi18/config/jdbc.properties
@@ -1,22 +1,21 @@
 
 # DataSource
-install=false
+install=true
 jdbc.datasource=com.alibaba.druid.pool.DruidDataSource
 jdbc.show_sql=true
 
 
 # Database Configurations
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=DB_URL
-jdbc.username=DB_USER
-jdbc.password=DB_PASSWORD
-jdbc.maxActive=DB_MAXPOOL
-jdbc.minIdle=DB_MINPOOL
+jdbc.url=jdbc\:mysql\://127.0.0.1\:3306/yi18?characterEncoding\=utf8
+jdbc.username=root
+jdbc.password=clysl
+jdbc.maxActive=50
+jdbc.minIdle=2
 jdbc.initialSize=2
 jdbc.acquireIncrement=2
 jdbc.maxPoolPreparedStatementPerConnectionSize=1000
 jdbc.minEvictableIdleTimeMillis =300
-
 
 
 
