--- a/yi18/WebContent/WEB-INF/web.xml
+++ b/yi18/WebContent/WEB-INF/web.xml
@@ -8,7 +8,7 @@
   <filter-class>cn.yi18.filter.URLMappingFilter</filter-class>
   <init-param>
    <param-name>ignore</param-name>
-   <param-value>/action/,/common/</param-value>
+   <param-value>/action/,/app/,/common/</param-value>
   </init-param>
   <init-param>
    <param-name>ignoreExts</param-name>
@@ -23,17 +23,33 @@
   <listener-class>cn.yi18.listener.SCListener</listener-class>
  </listener>
  <servlet>
-  <servlet-name>Servlet</servlet-name>
+  <servlet-name>Action</servlet-name>
   <servlet-class>cn.yi18.action.ServletAction</servlet-class>
   <init-param>
    <param-name>package</param-name>
    <param-value>cn.yi18.action</param-value>
   </init-param>
  </servlet>
+ 
+  <servlet>
+  <servlet-name>App</servlet-name>
+  <servlet-class>cn.yi18.app.ServletApp</servlet-class>
+  <init-param>
+   <param-name>package</param-name>
+   <param-value>cn.yi18.app</param-value>
+  </init-param>
+ </servlet>
+ 
  <servlet-mapping>
-  <servlet-name>Servlet</servlet-name>
+  <servlet-name>Action</servlet-name>
   <url-pattern>/action/*</url-pattern>
  </servlet-mapping>
+ 
+  <servlet-mapping>
+  <servlet-name>App</servlet-name>
+  <url-pattern>/app/*</url-pattern>
+ </servlet-mapping>
+ 
  
  <error-page>
   <error-code>404</error-code>
