--- a/yi18/WebContent/WEB-INF/web.xml
+++ b/yi18/WebContent/WEB-INF/web.xml
@@ -8,7 +8,7 @@
   <filter-class>cn.yi18.filter.URLMappingFilter</filter-class>
   <init-param>
    <param-name>ignore</param-name>
-   <param-value>/action/,/app/,/common/</param-value>
+   <param-value>/action/,/app/,/common/,/yi18app/</param-value>
   </init-param>
   <init-param>
    <param-name>ignoreExts</param-name>
